# RP2040_Wiznet_EaaS_aws_iot

./: .gitmodules  01_cmake.bat  02_build.bat  CMakeLists.txt  rp2040_wiznet_eaas-patch.cmake  rp2040_wiznet_eaas.cmake
app/: CMakeLists.txt  app_main.ld  main.c
app/aws_iot/: aws_iot_cert.c  aws_iot_cert.h  aws_iot_config.h  aws_tls_interface.c  aws_tls_interface.h  fleet_provisioning_handler.c  fleet_provisioning_handler.h  iot_jobs_handler.c  iot_jobs_handler.h  iot_jobs_job_list.c  iot_jobs_job_list.h  iot_jobs_job_ota_handler.c  iot_jobs_job_ota_handler.h
app/tasks/: aws_iot_jobs_task.c  aws_iot_jobs_task.h  fleet_provisioning_task.h  idle_task.c  idle_task.h  main_app_task.c  main_app_task.h  unit_test_task.c  unit_test_task.h
boot/: CMakeLists.txt  main.c  test_menu.c  test_menu.h
build_tools/crc16_maker/: crc16_ccit_maker.py
libraries/: CMakeLists.txt
port/: CMakeLists.txt  port_common.h
port/aws-iot-device-sdk-embedded-C/inc/: core_http_config.h  core_mqtt_config.h  transport_interface.h
port/device_common/: aws_iot_config.h  config.h  crc16.h  device_common.c  device_common.h  led_control.c  led_control.h  logger.c  logger.h  os_common.c  os_common.h  simple_cert_checker.c  simple_cert_checker.h  system_common.c  system_common.h  system_common_for_nonos.c  system_common_for_nonos.h  ymodem.c  ymodem.h
port/flash_interface/: flash_control.c  flash_control.h
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
port/network_interface/: ethernet.c  ethernet.h  http_interface.c  http_interface.h  mqtt_interface.c  mqtt_interface.h  tls_socket_interface.c  tls_socket_interface.h
port/timer/: timer.h
